--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head>
 	<title>BlogTok | Amlan Saha Kundu</title>
-	<meta http-equiv="Refresh" content="0; url='./v1/index.html'" />
+	<meta http-equiv="Refresh" content="0; url='./v1/index.html?19'" />
 </head>
 
 <body></body></html>
