--- a/v1/index.html
+++ b/v1/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="style.css" />
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 	<script src="post.js" type="text/javascript"></script>
-	<script src="script.js" type="text/javascript"></script>
+	<script src="https://cdn.jsdelivr.net/gh/yoursamlan/BlogTok@main/CDN/BlogTok1.0.0.js" type="text/javascript"></script>
 </head>
 
 <body onload="init();">
