--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head>
-	<title>BlogTok | Amlan Saha Kundu</title>
+	<title>BlogTok | Pradip Kumar Sutar </title>
 	<meta http-equiv="Refresh" content="0; url='./v1/index.html?1'" />
 </head>
 
